--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
   <title>Valgorama</title>
+  <meta charset="utf-8">
+  <link href="http://styleguide.dagbladet.no/stylesheets/critical.css" type="text/css" />
 </head>
   <body>
     <div id="container"></div>
+    <script src="js/appcss.js" type="text/javascript"></script>
     <script src="js/valgorama.js" type="text/javascript"></script>
   </body>
 </html>
