--- a/lumen/public/client/index.html
+++ b/lumen/public/client/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Valgorama</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="http://styleguide.dagbladet.no/stylesheets/critical.css" type="text/css" />
 </head>
   <body>
